# StudyProjects_WebServer

./: README.md
BetterWeb/: 2025_05_23_ServerLog  main.cpp  server
TinyWebServer/: 2025_05_23_ServerLog  2025_05_28_ServerLog  2025_06_10_ServerLog  lzq_in_log  lzq_in_threadpool  main.cpp  makefile  server
TinyWebServer/.obsidian/: workspace.json
TinyWebServer/.obsidian/plugins/unitade/: data.json
TinyWebServer/CGImysql/: sql_connection_pool.cpp  sql_connection_pool.h
TinyWebServer/http/: http_conn.cpp  http_conn.h
TinyWebServer/lock/: locker.h
TinyWebServer/log/: block_queue.h  log.cpp  log.h
TinyWebServer/test_lzq/: in_log.cpp  in_threadpool.cpp
TinyWebServer/threadpool/: threadpool.h
TinyWebServer/timer/: lst_timer.h
book/: CMakeLists.txt
book/include/: 11http_answer.hpp  16.2lst_temer.hpp
book/src/: 10splice_tee.cpp  11http_answer.cpp  12.1epoll_ET_LT.cpp  12.2epoll_ONESHOT.cpp  12select.cpp  13.1chat_client.cpp  13.2chat_server.cpp  13non-blocking_connect.cpp  14server_for_tcp_and_udp.cpp  15signal_piping.cpp  16.1timer_socket.cpp  16.2timer_sigalrm.cpp  16.3timer_io.cpp  16.4timer_wheel.cpp  16.5timer_heap.cpp  17libevent.cpp  18shared_memory.cpp  1byte_order.cpp  2listen.cpp  3accept.cpp  4tcp_data_r.cpp  4tcp_data_s.cpp  5getdate.cpp  6CGI.cpp  7writev.cpp  8sendfile.cpp  9splice_pipe.cpp  client.cpp  tf.py
